# mcp-demo

./: .env.example  .gitignore  README.md  config.py  db.py  docker-compose.yml  expenses.db  init.sql  main.py  pyproject.toml
.github/workflows/: docker-image.yml
app/agents/: expense_agent.py
app/core/: logging.py
app/db/: database.py  redis_cache.py
app/models/: base.py  expense.py
app/notebooks/: langgraph_course.ipynb  memory.db-shm  memory.db-wal  python_interview.ipynb
app/repository/: aws_repository.py
app/routes/: dependencies.py  expenses.py  upload_router.py
app/scripts/: faker_script.py
app/services/: expense_service.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml  init.sql  langgraph_course.ipynb
frontend/: streamlit_app.py
src/database/: __init__.py  db.py
src/models/: expense.py
src/routes/: expense_route.py
src/schema/: expense_schema.py
src/services/: expense_service.py
tests/: conftest.py
tests/unit/: test_services.py
